# Projeto-ECOM042

./: CMakeLists.txt  Kconfig  README.md  prj.conf
src/: camera_service.c  camera_service.h  main.c  plate.c  plate.h  radar_bus.c  radar_bus.h  radar_control.c  radar_control.h  radar_display.c  radar_display.h  radar_processing.c  radar_processing.h  sensor.c  sensor.h  sensor_sim.c  vehicle_infraction_plate.c  vehicle_infraction_plate.h
test/: CMakeLists.txt  prj.conf
test/src/: main.c  test_plate.c  test_radar_display.c  test_radar_processing.c
